--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,8 +18,8 @@ RUN pip install --no-cache-dir --upgrade pip && \
     pre-commit==2.19.0
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends rubygems
+    && apt-get install -y --no-install-recommends rubygems \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*\
+    && rm -rf /var/lib/apt/lists/*
 
 ENV TZ Asia/Tokyo
