--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,39 +13,52 @@
                 },
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
                 "python.languageServer": "Default",
-                "python.linting.enabled": true,
-                "python.linting.pylintEnabled": false,
-                "python.linting.flake8Enabled": true,
-                "python.linting.flake8Args": [
+                "python.analysis.typeCheckingMode": "strict",
+                "flake8.path": [
+                    "flake8"
+                ],
+                "flake8.args": [
                     "--ignore=E501",
                     "--per-file-ignores=__init__.py:F401"
                 ],
-                "python.linting.mypyEnabled": true,
-                "python.linting.mypyArgs": [
+                "mypy-type-checker.args": [
                     "--follow-imports=silent",
                     "--ignore-missing-imports",
                     "--show-column-numbers",
                     "--no-pretty",
                     "--strict"
                 ],
-                "python.linting.banditEnabled": true,
-                "python.linting.pydocstyleEnabled": true,
-                "python.linting.lintOnSave": true,
-                "python.formatting.provider": "black",
+                "mypy-type-checker.path": [
+                    "mypy"
+                ],
+                "black-formatter.path": [
+                    "black"
+                ],
+                "isort.path": [
+                    "isort"
+                ],
+                "isort.args": [
+                    "--profile",
+                    "black"
+                ],
                 "editor.formatOnSave": true,
                 "editor.codeActionsOnSave": {
-                    "source.organizeImports": true
+                    "source.organizeImports": "explicit"
                 }
             },
             "extensions": [
                 "ms-python.python",
-                "ms-python.vscode-pylance",
+                "ms-python.flake8",
+                "ms-python.mypy-type-checker",
+                "ms-python.black-formatter",
+                "ms-python.isort",
                 "DavidAnson.vscode-markdownlint",
                 "donjayamanne.githistory",
                 "njpwerner.autodocstring",
-                "oderwat.indent-rainbow"
+                "oderwat.indent-rainbow",
+                "ms-azuretools.vscode-docker"
             ]
         }
     },
-    "postCreateCommand": "sh .devcontainer/postCreateCommand.sh"
+    "postStartCommand": "sh .devcontainer/postStartCommand.sh"
 }
