--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,15 @@
-[tool.black]
-line-length = 88 # 1行の長さ
-exclude = '''
-/(
-    \.git
-  | \.mypy_cache
-  | \.tox
-  | venv
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+[tool.ruff.lint]
+# pydocstyle (`D`), isort (`I`)
+select = [ "D", "I" ]
 
-[tool.isort]
-# isort を black の設定に合わせる
-profile = "black"
+[tool.ruff.lint.pydocstyle]
+convention = "google"
 
-[tool.bandit]
-exclude_dirs = ["tests"]
+[tool.mypy]
+python_version = "3.13"
+show_error_context = true  # エラー時のメッセージを詳細表示
+show_column_numbers = true  # エラー発生箇所の行数/列数を表示
+disallow_untyped_defs = true  # 関数定義の引数/戻り値に型アノテーション必須
+no_implicit_optional = true  # デフォルト引数に None を取る場合型アノテーションに Optional 必須
+check_untyped_defs = true  # 型注釈がない関数やメソッドに対して型チェックを行う
+warn_redundant_casts = true  # 冗長なキャストに警告
